--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   charts_flutter: ^0.8.1
   splashscreen: ^1.2.0
   firebase_messaging: ^6.0.9
+  webview_flutter: ^0.3.18+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
